--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.4",
-        "symfony/symfony": "^2.7|^3.0"
+        "symfony/framework-bundle": "^2.7 || ^3.0 || ^4.0",
     },
     "autoload": {
         "psr-4": { "Avegao\\ChartjsBundle\\": "" }
