--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4",
-        "symfony/framework-bundle": "^2.7 || ^3.0 || ^4.0"
+        "php": ">=7.3",
+        "symfony/framework-bundle": "^2.7 || ^3.0 || ^4.0 || ^5.0"
     },
     "autoload": {
         "psr-4": { "Avegao\\ChartjsBundle\\": "" }
